--- a/flu_shot_learning-GENERAL.ipynb
+++ b/flu_shot_learning-GENERAL.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "stuck-remedy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "revolutionary-unknown",
    "metadata": {},
    "source": [
     "# Loading data"
@@ -29,8 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "necessary-prophet",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,8 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "lightweight-nomination",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,16 +46,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innocent-possibility",
    "metadata": {},
    "source": [
-    "# Data First ImpressionsX_train.shape"
+    "# Data First Impressions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "another-record",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +62,7 @@
        "(26707, 35)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,8 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "interim-tokyo",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +338,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,8 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "frank-graduate",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +422,7 @@
        "4                         0                 0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,8 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "fancy-cooking",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +477,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,8 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "greenhouse-celebrity",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +497,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,8 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "alpine-removal",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,8 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "ordered-stanford",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +713,7 @@
        "max                 1.000000          1.000000              1.000000  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,8 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "cooked-issue",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +939,7 @@
        "max              3.000000  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,19 +950,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metallic-pressing",
    "metadata": {},
    "source": [
     "* We can see that most columns are binary (either 0 or 1) - this can be seen from the quartiles of the data.\n",
-    "* We can also immediately see that some columns have missing values - count < data.shape[0].\n",
-    "\n",
+    "* We can also immediately see that some columns have missing values - count < data.shape[0]."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Lets see which columns have missing values:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "organic-closure",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1222,7 +1219,7 @@
        "employment_occupation                   13470               50.44"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1232,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "transsexual-stretch",
    "metadata": {},
    "source": [
     "Lets look more closely to the features with more than 10% missing values:"
@@ -1243,8 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "wrong-spirit",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1300,7 @@
        "employment_occupation             13470               50.44"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1311,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fatal-possible",
    "metadata": {},
    "source": [
     "These columns have such a high percentage of missing values that I might consider just dropping them out of the classification.\n",
@@ -1331,7 +1325,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acquired-choir",
    "metadata": {},
    "source": [
     "For the *income_poverty* feature, the possible values are:"
@@ -1339,20 +1332,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "critical-establishment",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Medium    12777\n",
-       "High       6810\n",
-       "Low        2697\n",
+       "<= $75,000, Above Poverty    12777\n",
+       "> $75,000                     6810\n",
+       "Below Poverty                 2697\n",
        "Name: income_poverty, dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1363,7 +1355,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corresponding-witch",
    "metadata": {},
    "source": [
     "Which we can simplify in terms of income as [*Low*, *Medium*, *High*]:"
@@ -1371,8 +1362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "careful-stage",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,37 +1373,310 @@
   },
   {
    "cell_type": "markdown",
-   "id": "romantic-holocaust",
    "metadata": {},
    "source": [
     "Now, we can also see that the *Medium* income level is the most frequent, which makes sense, considering the meaning of the feature. We can use this information to replace the missing values with the most frequent one: *Medium*."
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will do this further down with an *imputer* so we create a list of columns to be imputed with the *most frequent* value:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "mineral-moses",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train['income_poverty'].fillna('Medium', inplace = True)"
+    "cols_most_frequent = ['income_poverty']"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "familiar-liabilities",
    "metadata": {},
    "source": [
-    "*To be continued...*"
+    "Regarding, *health_insurance* and *employment_industry/occupation*, taking into account that almost half of the data is missing, I am going to drop these columns for now, instead of making possibly biased assumptions about the data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "neither-cache",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cols_drop = ['health_insurance', 'employment_industry', 'employment_occupation']\n",
+    "X_train.drop(cols_drop, axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we can look into two other columns with missing values (> 8% missing) - *doctor_recc_h1n1* and *doctor_recc_seasonal*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Missing Absolute</th>\n",
+       "      <th>Missing Percentage</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>doctor_recc_h1n1</th>\n",
+       "      <td>2160</td>\n",
+       "      <td>8.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>doctor_recc_seasonal</th>\n",
+       "      <td>2160</td>\n",
+       "      <td>8.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>income_poverty</th>\n",
+       "      <td>4423</td>\n",
+       "      <td>16.56</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Missing Absolute  Missing Percentage\n",
+       "doctor_recc_h1n1                  2160                8.09\n",
+       "doctor_recc_seasonal              2160                8.09\n",
+       "income_poverty                    4423               16.56"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values_df = pd.DataFrame({'Missing Absolute': X_train.isna().sum(),\n",
+    "              'Missing Percentage': np.round(X_train.isna().sum()/X_train.shape[0] * 100, 2)}) # Updating the missing values dataframe\n",
+    "\n",
+    "missing_values_df[missing_values_df['Missing Percentage'] > 8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Recc H1N1</th>\n",
+       "      <th>Recc SEAS</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.0</th>\n",
+       "      <td>19139</td>\n",
+       "      <td>16453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.0</th>\n",
+       "      <td>5408</td>\n",
+       "      <td>8094</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Recc H1N1  Recc SEAS\n",
+       "0.0      19139      16453\n",
+       "1.0       5408       8094"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'Recc H1N1': X_train['doctor_recc_h1n1'].value_counts(),\n",
+    "              'Recc SEAS': X_train['doctor_recc_seasonal'].value_counts()})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since doctors seem to not recommend the vacines about 2-3 times as often as they recommend it, we can assume that the missing values represent times where the doctor did not recommend the shots. So:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_most_frequent.extend(['doctor_recc_h1n1', 'doctor_recc_seasonal'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "missing_values_df = pd.DataFrame({'Missing Absolute': X_train.isna().sum(),\n",
+    "                                  'Missing Percentage': np.round(X_train.isna().sum()/X_train.shape[0] * 100, 2)}) # Updating the missing values dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the remaining columns, we can also impute them with the *most frequent* value since there are <8% of missing values and the values are mostly categorical so we dont want to impute with the mean. Thus: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_most_frequent.extend(list(missing_values_df[missing_values_df > 0].index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "imputer_most_frequent = SimpleImputer(strategy = 'most_frequent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_imputed = pd.DataFrame(imputer_most_frequent.fit_transform(X_train[cols_most_frequent]), columns = cols_most_frequent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have all columns been processed?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len([col for col in X_train.columns if col not in X_train_imputed.columns]) == 0"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Great. Are there any missing values?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_imputed.isna().sum().any()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amazing! We can now start making predictions on our data!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*To be continued...*"
+   ]
   }
  ],
  "metadata": {
@@ -1432,7 +1695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
