Data preprocessing and first predictions.

--- a/flu_shot_learning-GENERAL.ipynb
+++ b/flu_shot_learning-GENERAL.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_csv('data\\\\training_set_features.csv', index_col = 'respondent_id')\n",
-    "y_train = pd.read_csv('data\\\\training_set_labels.csv', index_col = 'respondent_id')"
+    "X_train_full = pd.read_csv('data\\\\training_set_features.csv', index_col = 'respondent_id')\n",
+    "y_train_full = pd.read_csv('data\\\\training_set_labels.csv', index_col = 'respondent_id')"
    ]
   },
   {
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "X_train.shape"
+    "X_train_full.shape"
    ]
   },
   {
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "X_train.head()"
+    "X_train_full.head()"
    ]
   },
   {
@@ -428,7 +428,7 @@
     }
    ],
    "source": [
-    "y_train.head()"
+    "y_train_full.head()"
    ]
   },
   {
@@ -483,7 +483,7 @@
     }
    ],
    "source": [
-    "X_train.dtypes"
+    "X_train_full.dtypes"
    ]
   },
   {
@@ -503,7 +503,7 @@
     }
    ],
    "source": [
-    "X_train['h1n1_concern'].dtype"
+    "X_train_full['h1n1_concern'].dtype"
    ]
   },
   {
@@ -512,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "float_cols = [col for col in X_train.columns if X_train[col].dtype == 'float64']"
+    "float_cols = [col for col in X_train_full.columns if X_train_full[col].dtype == 'float64']"
    ]
   },
   {
@@ -719,7 +719,7 @@
     }
    ],
    "source": [
-    "X_train[float_cols[:len(float_cols)//2]].describe()"
+    "X_train_full[float_cols[:len(float_cols)//2]].describe()"
    ]
   },
   {
@@ -945,7 +945,7 @@
     }
    ],
    "source": [
-    "X_train[float_cols[len(float_cols)//2:]].describe()"
+    "X_train_full[float_cols[len(float_cols)//2:]].describe()"
    ]
   },
   {
@@ -1225,8 +1225,8 @@
     }
    ],
    "source": [
-    "missing_values_df = pd.DataFrame({'Missing Absolute': X_train.isna().sum(),\n",
-    "              'Missing Percentage': np.round(X_train.isna().sum()/X_train.shape[0] * 100, 2)})\n",
+    "missing_values_df = pd.DataFrame({'Missing Absolute': X_train_full.isna().sum(),\n",
+    "              'Missing Percentage': np.round(X_train_full.isna().sum()/X_train_full.shape[0] * 100, 2)})\n",
     "missing_values_df"
    ]
   },
@@ -1350,7 +1350,7 @@
     }
    ],
    "source": [
-    "X_train['income_poverty'].value_counts()"
+    "X_train_full['income_poverty'].value_counts()"
    ]
   },
   {
@@ -1366,9 +1366,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train['income_poverty'].replace('Below Poverty', 'Low', inplace = True)\n",
-    "X_train['income_poverty'].replace('<= $75,000, Above Poverty', 'Medium', inplace = True)\n",
-    "X_train['income_poverty'].replace('> $75,000', 'High', inplace = True)"
+    "X_train_full['income_poverty'].replace('Below Poverty', 'Low', inplace = True)\n",
+    "X_train_full['income_poverty'].replace('<= $75,000, Above Poverty', 'Medium', inplace = True)\n",
+    "X_train_full['income_poverty'].replace('> $75,000', 'High', inplace = True)"
    ]
   },
   {
@@ -1391,7 +1391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_most_frequent = ['income_poverty']"
+    "cols_most_frequent = ['income_poverty']\n",
+    "missing_values_df.drop('income_poverty', axis = 0, inplace = True)"
    ]
   },
   {
@@ -1408,7 +1409,7 @@
    "outputs": [],
    "source": [
     "cols_drop = ['health_insurance', 'employment_industry', 'employment_occupation']\n",
-    "X_train.drop(cols_drop, axis = 1, inplace = True)"
+    "missing_values_df.drop(cols_drop, axis = 0, inplace = True)"
    ]
   },
   {
@@ -1459,11 +1460,6 @@
        "      <td>2160</td>\n",
        "      <td>8.09</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>income_poverty</th>\n",
-       "      <td>4423</td>\n",
-       "      <td>16.56</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1471,8 +1467,7 @@
       "text/plain": [
        "                      Missing Absolute  Missing Percentage\n",
        "doctor_recc_h1n1                  2160                8.09\n",
-       "doctor_recc_seasonal              2160                8.09\n",
-       "income_poverty                    4423               16.56"
+       "doctor_recc_seasonal              2160                8.09"
       ]
      },
      "execution_count": 18,
@@ -1481,9 +1476,6 @@
     }
    ],
    "source": [
-    "missing_values_df = pd.DataFrame({'Missing Absolute': X_train.isna().sum(),\n",
-    "              'Missing Percentage': np.round(X_train.isna().sum()/X_train.shape[0] * 100, 2)}) # Updating the missing values dataframe\n",
-    "\n",
     "missing_values_df[missing_values_df['Missing Percentage'] > 8]"
    ]
   },
@@ -1544,8 +1536,8 @@
     }
    ],
    "source": [
-    "pd.DataFrame({'Recc H1N1': X_train['doctor_recc_h1n1'].value_counts(),\n",
-    "              'Recc SEAS': X_train['doctor_recc_seasonal'].value_counts()})"
+    "pd.DataFrame({'Recc H1N1': X_train_full['doctor_recc_h1n1'].value_counts(),\n",
+    "              'Recc SEAS': X_train_full['doctor_recc_seasonal'].value_counts()})"
    ]
   },
   {
@@ -1561,17 +1553,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cols_most_frequent.extend(['doctor_recc_h1n1', 'doctor_recc_seasonal'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "missing_values_df = pd.DataFrame({'Missing Absolute': X_train.isna().sum(),\n",
-    "                                  'Missing Percentage': np.round(X_train.isna().sum()/X_train.shape[0] * 100, 2)}) # Updating the missing values dataframe"
+    "doctor_recc_list = ['doctor_recc_h1n1', 'doctor_recc_seasonal']\n",
+    "\n",
+    "cols_most_frequent.extend(doctor_recc_list)\n",
+    "\n",
+    "missing_values_df.drop(doctor_recc_list, axis = 0, inplace = True)"
    ]
   },
   {
@@ -1583,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,91 +1578,386 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.impute import SimpleImputer\n",
     "\n",
-    "imputer_most_frequent = SimpleImputer(strategy = 'most_frequent')"
+    "imputer_most_frequent = SimpleImputer(strategy='most_frequent')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_imputed = pd.DataFrame(imputer_most_frequent.fit_transform(X_train[cols_most_frequent]), columns = cols_most_frequent)"
+    "categorical_cols = [col for col in X_train_full.columns if X_train_full[col].dtype == 'object' and col not in cols_drop]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "cat_preprocessor = Pipeline([('impute', SimpleImputer(strategy='most_frequent')),\n",
+    "                             ('encode', OneHotEncoder(handle_unknown='ignore', sparse=False))\n",
+    "                            ])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Have all columns been processed?"
+    "This preprocessing can be made convenient using *scikit learn* and a *ColumnTransformer*:cols_most_frequent.extend(cols_drop)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len([col for col in X_train.columns if col not in X_train_imputed.columns]) == 0"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Great. Are there any missing values?"
+    "numerical_cols = [col for col in X_train_full.columns if col not in categorical_cols and col not in cols_drop]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "\n",
+    "preprocessor = ColumnTransformer([('impute', imputer_most_frequent, numerical_cols),\n",
+    "                                  ('encode_cat', cat_preprocessor, categorical_cols),\n",
+    "                                  ('drop', 'drop', cols_drop)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are now set to make some predictions on this data!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Benchmark Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To begin with, I want to build a simple model which makes some predictions just to benchmark it and to make my first submission to the competion."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_train_full,\n",
+    "                                                      y_train_full,\n",
+    "                                                      train_size=0.8,\n",
+    "                                                      random_state=42,\n",
+    "                                                      shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "XGB_class = XGBClassifier(objective='reg:logistic', random_state=42, use_label_encoder=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.multioutput import MultiOutputClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "XGB_multi_class = MultiOutputClassifier(estimator=XGB_class)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "full_pipeline = Pipeline([('preprocessor', preprocessor),\n",
+    "                          ('estimator', XGB_multi_class)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "Pipeline(steps=[('preprocessor',\n",
+       "                 ColumnTransformer(transformers=[('impute',\n",
+       "                                                  SimpleImputer(strategy='most_frequent'),\n",
+       "                                                  ['h1n1_concern',\n",
+       "                                                   'h1n1_knowledge',\n",
+       "                                                   'behavioral_antiviral_meds',\n",
+       "                                                   'behavioral_avoidance',\n",
+       "                                                   'behavioral_face_mask',\n",
+       "                                                   'behavioral_wash_hands',\n",
+       "                                                   'behavioral_large_gatherings',\n",
+       "                                                   'behavioral_outside_home',\n",
+       "                                                   'behavioral_touch_face',\n",
+       "                                                   'doctor_recc_h1n1',\n",
+       "                                                   'docto...\n",
+       "                                                               learning_rate=None,\n",
+       "                                                               max_delta_step=None,\n",
+       "                                                               max_depth=None,\n",
+       "                                                               min_child_weight=None,\n",
+       "                                                               missing=nan,\n",
+       "                                                               monotone_constraints=None,\n",
+       "                                                               n_estimators=100,\n",
+       "                                                               n_jobs=None,\n",
+       "                                                               num_parallel_tree=None,\n",
+       "                                                               objective='reg:logistic',\n",
+       "                                                               random_state=42,\n",
+       "                                                               reg_alpha=None,\n",
+       "                                                               reg_lambda=None,\n",
+       "                                                               scale_pos_weight=None,\n",
+       "                                                               subsample=None,\n",
+       "                                                               tree_method=None,\n",
+       "                                                               use_label_encoder=False,\n",
+       "                                                               validate_parameters=None,\n",
+       "                                                               verbosity=None)))])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train_imputed.isna().sum().any()"
+    "full_pipeline.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = full_pipeline.predict_proba(X_valid)\n",
+    "y_pred = pd.DataFrame({'h1n1': y_pred[0][:, 1],\n",
+    "                       'seas': y_pred[1][:, 1]}, index = X_valid.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8285273153197793"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "roc_auc_score(y_valid, y_pred)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Amazing! We can now start making predictions on our data!"
+    "# Making predictions"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "*To be continued...*"
+    "predictions = full_pipeline.predict_proba(X_test)\n",
+    "predictions = pd.DataFrame({'h1n1': predictions[0][:, 1],\n",
+    "                            'seas': predictions[1][:, 1],\n",
+    "                            'respondent_id': X_test.index})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>h1n1</th>\n",
+       "      <th>seas</th>\n",
+       "      <th>respondent_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.032428</td>\n",
+       "      <td>0.244899</td>\n",
+       "      <td>26707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.004993</td>\n",
+       "      <td>0.062334</td>\n",
+       "      <td>26708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.791063</td>\n",
+       "      <td>0.806808</td>\n",
+       "      <td>26709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.590995</td>\n",
+       "      <td>0.783000</td>\n",
+       "      <td>26710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.295606</td>\n",
+       "      <td>0.517834</td>\n",
+       "      <td>26711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26703</th>\n",
+       "      <td>0.249963</td>\n",
+       "      <td>0.499514</td>\n",
+       "      <td>53410</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26704</th>\n",
+       "      <td>0.239794</td>\n",
+       "      <td>0.164715</td>\n",
+       "      <td>53411</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26705</th>\n",
+       "      <td>0.156185</td>\n",
+       "      <td>0.354434</td>\n",
+       "      <td>53412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26706</th>\n",
+       "      <td>0.008073</td>\n",
+       "      <td>0.348123</td>\n",
+       "      <td>53413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26707</th>\n",
+       "      <td>0.413442</td>\n",
+       "      <td>0.541360</td>\n",
+       "      <td>53414</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26708 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           h1n1      seas  respondent_id\n",
+       "0      0.032428  0.244899          26707\n",
+       "1      0.004993  0.062334          26708\n",
+       "2      0.791063  0.806808          26709\n",
+       "3      0.590995  0.783000          26710\n",
+       "4      0.295606  0.517834          26711\n",
+       "...         ...       ...            ...\n",
+       "26703  0.249963  0.499514          53410\n",
+       "26704  0.239794  0.164715          53411\n",
+       "26705  0.156185  0.354434          53412\n",
+       "26706  0.008073  0.348123          53413\n",
+       "26707  0.413442  0.541360          53414\n",
+       "\n",
+       "[26708 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions.to_csv('predictions.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
