Fixing submission column order and names.

--- a/flu_shot_learning-GENERAL.ipynb
+++ b/flu_shot_learning-GENERAL.ipynb
@@ -1804,19 +1804,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "predictions = full_pipeline.predict_proba(X_test)\n",
-    "predictions = pd.DataFrame({'h1n1': predictions[0][:, 1],\n",
-    "                            'seas': predictions[1][:, 1],\n",
-    "                            'respondent_id': X_test.index})"
+    "predictions = pd.DataFrame({'respondent_id': X_test.index,\n",
+    "                            'h1n1_vaccine': predictions[0][:, 1],\n",
+    "                            'seasonal_vaccine': predictions[1][:, 1]\n",
+    "                           })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1840,41 +1841,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>h1n1</th>\n",
-       "      <th>seas</th>\n",
        "      <th>respondent_id</th>\n",
+       "      <th>h1n1_vaccine</th>\n",
+       "      <th>seasonal_vaccine</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>26707</td>\n",
        "      <td>0.032428</td>\n",
        "      <td>0.244899</td>\n",
-       "      <td>26707</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>26708</td>\n",
        "      <td>0.004993</td>\n",
        "      <td>0.062334</td>\n",
-       "      <td>26708</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>26709</td>\n",
        "      <td>0.791063</td>\n",
        "      <td>0.806808</td>\n",
-       "      <td>26709</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>26710</td>\n",
        "      <td>0.590995</td>\n",
        "      <td>0.783000</td>\n",
-       "      <td>26710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>26711</td>\n",
        "      <td>0.295606</td>\n",
        "      <td>0.517834</td>\n",
-       "      <td>26711</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1884,33 +1885,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26703</th>\n",
+       "      <td>53410</td>\n",
        "      <td>0.249963</td>\n",
        "      <td>0.499514</td>\n",
-       "      <td>53410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26704</th>\n",
+       "      <td>53411</td>\n",
        "      <td>0.239794</td>\n",
        "      <td>0.164715</td>\n",
-       "      <td>53411</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26705</th>\n",
+       "      <td>53412</td>\n",
        "      <td>0.156185</td>\n",
        "      <td>0.354434</td>\n",
-       "      <td>53412</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26706</th>\n",
+       "      <td>53413</td>\n",
        "      <td>0.008073</td>\n",
        "      <td>0.348123</td>\n",
-       "      <td>53413</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26707</th>\n",
+       "      <td>53414</td>\n",
        "      <td>0.413442</td>\n",
        "      <td>0.541360</td>\n",
-       "      <td>53414</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1918,23 +1919,23 @@
        "</div>"
       ],
       "text/plain": [
-       "           h1n1      seas  respondent_id\n",
-       "0      0.032428  0.244899          26707\n",
-       "1      0.004993  0.062334          26708\n",
-       "2      0.791063  0.806808          26709\n",
-       "3      0.590995  0.783000          26710\n",
-       "4      0.295606  0.517834          26711\n",
-       "...         ...       ...            ...\n",
-       "26703  0.249963  0.499514          53410\n",
-       "26704  0.239794  0.164715          53411\n",
-       "26705  0.156185  0.354434          53412\n",
-       "26706  0.008073  0.348123          53413\n",
-       "26707  0.413442  0.541360          53414\n",
+       "       respondent_id  h1n1_vaccine  seasonal_vaccine\n",
+       "0              26707      0.032428          0.244899\n",
+       "1              26708      0.004993          0.062334\n",
+       "2              26709      0.791063          0.806808\n",
+       "3              26710      0.590995          0.783000\n",
+       "4              26711      0.295606          0.517834\n",
+       "...              ...           ...               ...\n",
+       "26703          53410      0.249963          0.499514\n",
+       "26704          53411      0.239794          0.164715\n",
+       "26705          53412      0.156185          0.354434\n",
+       "26706          53413      0.008073          0.348123\n",
+       "26707          53414      0.413442          0.541360\n",
        "\n",
        "[26708 rows x 3 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1945,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
