--- a/flu_shot_learning-MODEL_SELECTION.ipynb
+++ b/flu_shot_learning-MODEL_SELECTION.ipynb
@@ -92,22 +92,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Ridge_class_h1n1 = RidgeClassifierCV()\n",
-    "Ridge_class_seas = RidgeClassifierCV()"
+    "Ridge_class_h1n1 = RidgeClassifierCV(alphas=[0.1, 0.25, 0.5, 1, 5, 10], cv=5)\n",
+    "Ridge_class_seas = RidgeClassifierCV(alphas=[0.1, 0.25, 0.5, 1, 5, 10], cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "KNN_class_h1n1 = KNeighborsClassifier(n_jobs=-1)\n",
-    "KNN_class_seas = KNeighborsClassifier(n_jobs=-1)"
+    "KNN_class_h1n1 = KNeighborsClassifier(n_neighbors=200, weights='distance', n_jobs=-1)\n",
+    "KNN_class_seas = KNeighborsClassifier(n_neighbors=200, weights='distance', n_jobs=-1)"
    ]
   },
   {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -398,6 +398,16 @@
       "Fold: 3\n",
       "Fold: 4\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\JoaoRodrigues\\miniconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:587: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n",
+      "C:\\Users\\JoaoRodrigues\\miniconda3\\lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:587: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
     }
    ],
    "source": [
@@ -406,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +483,12 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -562,9 +577,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Mean ROC AUC Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>LGBM</th>\n",
+       "      <td>LGBMClassifier(colsample_bytree=0.9, learning_...</td>\n",
+       "      <td>0.84088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XGB</th>\n",
+       "      <td>XGBClassifier(base_score=0.5, booster='gbtree'...</td>\n",
+       "      <td>0.840673</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Logist</th>\n",
+       "      <td>LogisticRegressionCV(max_iter=1000, n_jobs=-1)</td>\n",
+       "      <td>0.83305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KNN</th>\n",
+       "      <td>KNeighborsClassifier(n_jobs=-1, n_neighbors=20...</td>\n",
+       "      <td>0.794038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MLP</th>\n",
+       "      <td>MLPClassifier(max_iter=1000)</td>\n",
+       "      <td>0.755317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GaussNB</th>\n",
+       "      <td>GaussianNB()</td>\n",
+       "      <td>0.738239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>RidgeCV</th>\n",
+       "      <td>RidgeClassifierCV(alphas=array([ 0.1 ,  0.25, ...</td>\n",
+       "      <td>0.676262</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                     Model Mean ROC AUC Score\n",
+       "LGBM     LGBMClassifier(colsample_bytree=0.9, learning_...            0.84088\n",
+       "XGB      XGBClassifier(base_score=0.5, booster='gbtree'...           0.840673\n",
+       "Logist      LogisticRegressionCV(max_iter=1000, n_jobs=-1)            0.83305\n",
+       "KNN      KNeighborsClassifier(n_jobs=-1, n_neighbors=20...           0.794038\n",
+       "MLP                           MLPClassifier(max_iter=1000)           0.755317\n",
+       "GaussNB                                       GaussianNB()           0.738239\n",
+       "RidgeCV  RidgeClassifierCV(alphas=array([ 0.1 ,  0.25, ...           0.676262"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mean_roc_df_h1n1 = pd.DataFrame(mean_roc_dict_h1n1, index = ['Model', 'Mean ROC AUC Score']).transpose().sort_values(by='Mean ROC AUC Score', ascending=False)\n",
     "mean_roc_df_h1n1"
